--- a/docs/source/releases/v1.0.rst
+++ b/docs/source/releases/v1.0.rst
@@ -135,6 +135,7 @@ Optimizers:
 * :func:`~prysm.experimental.optym.optimizers.ADAM`
 * :func:`~prysm.experiemntal.optym.optimizers.RADAM`
 * :func:`~prysm.experiemntal.optym.optimizers.Yogi`
+* :func:`~prysm.experiemntal.optym.optimizers.AdaMomentum`
 * :func:`~prysm.experimental.optym.optimizers.F77LBFGSB`
 
 Note that while L-BFGS-B is the darling of my heart, it is currently too
